CLOSED FIXED17794
REGRESSION (r30980): 23 tests hanging on the Mac buildbot
https://bugs.webkit.org/show_bug.cgi?id=17794
Summary REGRESSION (r30980): 23 tests hanging on the Mac buildbot
Darin Adler
Reported 2008-03-12 09:21:55 PDT
A bunch of tests are crashing on the buildbot now. Not sure why yet, but it seems to be caused by my bridge change.
Attachments
patch (1.12 KB, patch)
2008-03-12 09:37 PDT, Darin Adler
mrowe: review+
Darin Adler
Comment 1 2008-03-12 09:37:06 PDT
Mark Rowe (bdash)
Comment 2 2008-03-12 09:38:25 PDT
Comment on attachment 19699 [details] patch r=me
Darin Adler
Comment 3 2008-03-12 09:41:56 PDT
Committed revision 30993.
Note You need to log in before you can comment on or make changes to this bug.