        - fix http://bugs.webkit.org/show_bug.cgi?id=17794           REGRESSION (r30980): 23 tests hanging on the Mac buildbot

* WebView/WebFrame.mm:
        (-[WebFrame _initWithWebFrameView:webView:bridge:]): Added missing call to set
        up pointer from the bridge to the frame. (My next check-in removes the bridge
        entirely, but we need this until then.)



git-svn-id: svn://svn.chromium.org/blink/trunk@30993 bbb929c8-8fbe-4397-9dbb-9b2b20218538